src/definitions/collections/menu.less
/*
 * # Fomantic - Menu
 * http://github.com/fomantic/Fomantic-UI/
 *
 *
 * Copyright 2015 Contributor
 * Released under the MIT license
 * http://opensource.org/licenses/MIT
 *
 */


/*******************************
            Theme
*******************************/

@type    : 'collection';
@element : 'menu';

@import (multiple) '../../theme.config';

/*******************************
            Standard
*******************************/

/*--------------
      Menu
---------------*/

.ui.menu {
  display: flex;
  margin: @margin;
  font-family: @fontFamily;
  background: @background;
  font-weight: @fontWeight;
  border: @border;
  box-shadow: @boxShadow;
  border-radius: @borderRadius;
  min-height: @minHeight;
}

.ui.menu:after {
  content: '';
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
}

.ui.menu:first-child {
  margin-top: 0;
}
.ui.menu:last-child {
  margin-bottom: 0;
}


/*--------------
    Sub-Menu
---------------*/

.ui.menu .menu {
  margin: 0;
}

.ui.menu:not(.vertical) > .menu {
  display: flex;
}

/*--------------
      Item
---------------*/

.ui.menu:not(.vertical) .item {
  display: flex;
  align-items: center;
}

.ui.menu .item {
  position: relative;
  vertical-align: middle;
  line-height: 1;
  text-decoration: none;
  -webkit-tap-highlight-color: transparent;
  flex: 0 0 auto;
  user-select: none;

  background: @itemBackground;
  padding: @itemVerticalPadding @itemHorizontalPadding;
  text-transform: @itemTextTransform;
  color: @itemTextColor;
  font-weight: @itemFontWeight;
  transition: @itemTransition;
}

.ui.menu > .item:first-child {
  border-radius: @borderRadius 0 0 @borderRadius;
}

/* Border */
.ui.menu .item:before {
  position: absolute;
  content: '';
  top: 0;
  right: 0;
  height: 100%;

  width: @dividerSize;
  background: @dividerBackground;
}

/*--------------
  Text Content
---------------*/

.ui.menu .text.item > *,
.ui.menu .item > a:not(.ui),
.ui.menu .item > p:only-child {
  user-select: text;
  line-height: @textLineHeight;
}
.ui.menu .item > p:first-child {
  margin-top: 0;
}
.ui.menu .item > p:last-child {
  margin-bottom: 0;
}

/*--------------
      Icons
---------------*/

.ui.menu .item > i.icon {
  opacity: @iconOpacity;
  float: @iconFloat;
  margin: @iconMargin;
}

/*--------------
     Button
---------------*/

.ui.menu:not(.vertical) .item > .button {
  position: relative;
  top: @buttonOffset;
  margin: @buttonMargin;
  padding-bottom: @buttonVerticalPadding;
  padding-top: @buttonVerticalPadding;
  font-size: @buttonSize;
}

/*----------------
 Grid / Container
-----------------*/

.ui.menu >  .grid,
.ui.menu > .container {
  display: flex;
  align-items: inherit;
  flex-direction: inherit;
}

/*--------------
     Inputs
---------------*/

.ui.menu .item > .input {
  width: 100%;
}
.ui.menu:not(.vertical) .item > .input {
  position: relative;
  top: @inputOffset;
  margin: @inputVerticalMargin 0;
}
.ui.menu .item > .input input {
  font-size: @inputSize;
  padding-top: @inputVerticalPadding;
  padding-bottom: @inputVerticalPadding;
}


/*--------------
     Header
---------------*/

.ui.menu .header.item,
.ui.vertical.menu .header.item {
  margin: 0;
  background: @headerBackground;
  text-transform: @headerTextTransform;
  font-weight: @headerWeight;
}

& when (@variationMenuVertical) {
  .ui.vertical.menu .item > .header:not(.ui) {
    margin: @verticalHeaderMargin;
    font-size: @verticalHeaderFontSize;
    font-weight: @verticalHeaderFontWeight;
  }
}

/*--------------
    Dropdowns
---------------*/


/* Dropdown Icon */
.ui.menu .item > i.dropdown.icon {
  padding: 0;
  float: @dropdownIconFloat;
  margin: 0 0 0 @dropdownIconDistance;
}

/* Menu */
.ui.menu .dropdown.item .menu {
  min-width: e("calc(100% - 1px)");
  border-radius: 0 0 @dropdownMenuBorderRadius @dropdownMenuBorderRadius;
  background: @dropdownBackground;
  margin: @dropdownMenuDistance 0 0;
  box-shadow: @dropdownMenuBoxShadow;
  flex-direction: column !important;
}


/* Menu Items */
.ui.menu .ui.dropdown .menu > .item {
  margin: 0;
  text-align: left;
  font-size: @dropdownItemFontSize !important;
  padding: @dropdownItemPadding !important;
  background: @dropdownItemBackground !important;
  color: @dropdownItemColor !important;
  text-transform: @dropdownItemTextTransform !important;
  font-weight: @dropdownItemFontWeight !important;
  box-shadow: @dropdownItemBoxShadow !important;
  transition: @dropdownItemTransition !important;
}
.ui.menu .ui.dropdown .menu > .item:hover {
  background: @dropdownHoveredItemBackground !important;
  color: @dropdownHoveredItemColor !important;
}
.ui.menu .ui.dropdown .menu > .selected.item {
  background: @dropdownSelectedItemBackground !important;
  color: @dropdownSelectedItemColor !important;
}
.ui.menu .ui.dropdown .menu > .active.item {
  background: @dropdownActiveItemBackground !important;
  font-weight: @dropdownActiveItemFontWeight !important;
  color: @dropdownActiveItemColor !important;
}

.ui.menu .ui.dropdown.item .menu .item:not(.filtered) {
  display: block;
}
.ui.menu .ui.dropdown .menu > .item .icon:not(.dropdown) {
  display: inline-block;
  font-size: @dropdownItemIconFontSize !important;
  float: @dropdownItemIconFloat;
  margin: @dropdownItemIconMargin !important;
}

& when (@variationMenuSecondary) or (@variationMenuText) {
  /* Secondary */
  .ui.secondary.menu .dropdown.item > .menu,
  .ui.text.menu .dropdown.item > .menu {
    border-radius: @dropdownMenuBorderRadius;
    margin-top: @secondaryDropdownMenuDistance;
  }
}

/* Pointing */
.ui.menu .pointing.dropdown.item .menu {
  margin-top: @pointingDropdownMenuDistance;
}

& when (@variationMenuInverted) {
  /* Inverted */
  .ui.inverted.menu .search.dropdown.item > .search,
  .ui.inverted.menu .search.dropdown.item > .text {
    color: @invertedSelectionDropdownColor;
  }
}
/* ... */

